test/domains/compilerErrors/notsupportedParsafe-ok.chpl
use notsupportedCommon;

//writeln(dfltRectangularBase.parSafe);
compilerWarning(dfltAssociativeBase.parSafe :string);
//writeln(DistributedBase.parSafe);
//writeln(dfltRectangularSubdomain.parSafe);
compilerWarning(dfltAssociativeSubdomain.parSafe :string);
//writeln(DistributedSubdomain.parSafe);
//writeln(dfltRectangularSparseSub.parSafe);
//writeln(dfltAssociativeSparseSub.parSafe);
//writeln(DistributedSparseSub.parSafe);
compilerError("done");
