test/domains/compilerErrors/notsupportedParsafe-ok.good
notsupportedParsafe-ok.chpl:4: warning: false
notsupportedParsafe-ok.chpl:7: warning: false
notsupportedParsafe-ok.chpl:12: error: done
